FModifier.type enum 'NULL' item was renamed to 'nullptr' #115279

Closed
opened 2023-11-22 18:19:01 +01:00 by Thomas Barlow · 1 comment
Member

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.40

Blender Version
Broken: version: 4.0.1 and 4.1.0 Alpha, branch: main, commit date: 2023-11-15 19:33, hash: d0c073898a93
Worked: 3.6.5
Caused by: 3ece6876af

Short description of error
The 'NULL' FModifier.type enum item was renamed to 'nullptr'.

I'm not sure this type is actually used anywhere, but I noticed this change when looking at API changes between Blender versions, and it seems to have been a mistake in the C to C++ conversion.

Exact steps for others to reproduce the error
In the Python Console, run

[item.identifier for item in bpy.types.FModifier.bl_rna.properties['type'].enum_items]

Example output on 4.0.1 and 4.1.0a:
['nullptr', 'GENERATOR', 'FNGENERATOR', 'ENVELOPE', 'CYCLES', 'NOISE', 'LIMITS', 'STEPPED']
Example output on 3.6.5:
['NULL', 'GENERATOR', 'FNGENERATOR', 'ENVELOPE', 'CYCLES', 'NOISE', 'LIMITS', 'STEPPED']

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.40 **Blender Version** Broken: version: 4.0.1 and 4.1.0 Alpha, branch: main, commit date: 2023-11-15 19:33, hash: `d0c073898a93` Worked: 3.6.5 Caused by: 3ece6876af5ca8599b9becae4e869eb65b9337d9 **Short description of error** The `'NULL'` `FModifier.type` enum item was renamed to `'nullptr'`. I'm not sure this type is actually used anywhere, but I noticed this change when looking at API changes between Blender versions, and it seems to have been a mistake in the C to C++ conversion. **Exact steps for others to reproduce the error** In the Python Console, run ```py [item.identifier for item in bpy.types.FModifier.bl_rna.properties['type'].enum_items] ``` Example output on 4.0.1 and 4.1.0a: `['nullptr', 'GENERATOR', 'FNGENERATOR', 'ENVELOPE', 'CYCLES', 'NOISE', 'LIMITS', 'STEPPED']` Example output on 3.6.5: `['NULL', 'GENERATOR', 'FNGENERATOR', 'ENVELOPE', 'CYCLES', 'NOISE', 'LIMITS', 'STEPPED']`
Thomas Barlow added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2023-11-22 18:19:01 +01:00

Thank you for your diligence in identifying this issue, @Mysteryem.

Everything seems to indicate that the renaming of the 'NULL' FModifier.type enum item to 'nullptr' was unintentional.

So I will prepare a fix for this and commit it.

Cc. @JacquesLucke

Thank you for your diligence in identifying this issue, @Mysteryem. Everything seems to indicate that the renaming of the `'NULL'` `FModifier.type enum` item to `'nullptr'` was unintentional. So I will prepare a fix for this and commit it. Cc. @JacquesLucke
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-11-22 22:45:06 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#115279
No description provided.