Fix #115279: FModifier.type enum 'NULL' item was renamed to 'nullptr'

The 'NULL' identifier within the `FModifier.type` enum was acidently
renamed to 'nullptr' during the C to C++ source conversion in 3ece6876af.