source/blender/makesrna/intern/rna_fcurve.cc
@@ -31,7 +31,7 @@
 #include "ED_keyframing.hh"
 
 const EnumPropertyItem rna_enum_fmodifier_type_items[] = {
-    {FMODIFIER_TYPE_NULL, "nullptr", 0, "Invalid", ""},
+    {FMODIFIER_TYPE_NULL, "NULL", 0, "Invalid", ""},
     {FMODIFIER_TYPE_GENERATOR,
      "GENERATOR",
      0,
